--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "express": "^4.16.4",
-    "firebase": "^5.9.3",
+    "firebase": "^6.0.2",
+    "formik": "^1.5.4",
+    "formik-material-ui": "0.0.18",
     "isomorphic-unfetch": "^3.0.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
